feat: migrate terminal from ghostty-web to xterm.js (#24)

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -87,7 +87,7 @@
           <div class="feature-accent"></div>
           <svg class="feature-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="4 17 10 11 4 5"/><line x1="12" y1="19" x2="20" y2="19"/></svg>
           <h3>Integrated Terminal</h3>
-          <p>Full Ghostty terminal emulation with WebGL rendering. Supports TUI apps, colors, and persistent scrollback.</p>
+          <p>Full xterm.js terminal emulation with GPU rendering. Supports TUI apps, colors, and persistent scrollback.</p>
         </div>
         <div class="feature-card animate-in" style="--accent: var(--accent-purple)">
           <div class="feature-accent"></div>
